--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+span {
+  line-height: 40px;
+  padding: 20px;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
